test/assignment/undefined.lox
unknown = "what" // error: Undefined variable 'unknown'
